kubernetes/apps/flux-system/konflate/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate-webhook
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - hooks.zebernst.dev
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /konflate
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /hooks
      backendRefs:
        - name: konflate
          port: 8080
